# spacecam_ros_bridge

./: CMakeLists.txt  README.md  package.xml
docs/: posit.nb  posit.txt
include/: MatrixMath.cpp  MatrixMath.h  pos.cpp  pos.h
launch/: debug_smart_posit.launch  profile_smart_posit.launch  wifibridge.launch
src/: cpp_posit_node.cpp  cpp_smart_posit_node.cpp  love_at_first_sight.cpp  opencv_posit_node.cpp  trackpoint_publisher_node.cpp
